<resources>
    <string name="app_name">Track4Deals</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Impostazioni</string>
    <string name="title_profile">Profilo</string>
    <string name="title_tracking">Traccia</string>
    <string name="title_offers">Offerte</string>
    <string name="title_login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Ripeti la  Password</string>
    <string name="action_register">Registrati</string>
    <string name="action_cancel">Cancella</string>
    <string name="action_sign_in_short">Accedi</string>
    <string name="welcome">"Benvenuto!"</string>
    <string name="invalid_username">Non è un username valido</string>
    <string name="invalid_password">La password deve essere maggiore di 5 caratteri</string>
    <string name="login_failed">Login fallito</string>
    <string name="register_failed">Registrazione fallita</string>
    <string name="invalid_email">Email non valida</string>
    <string name="loading">Caricamento…</string>
    <string name="welcomeMessage">Benvenuto,\n </string>
    <!-- Strings related to profile -->
    <string name="name_surename_it">Nome e Cognome</string>
    <string name="phone_it">Cellulare</string>
    <string name="tracked_it">Prodotti tracciati</string>
    <string name="edit_button_it">MODIFICA PROFILO</string>
    <string name="edit_password_button_it">CAMBIA PASSWORD</string>
    <string name="delete_button_it">ELIMINA PROFILO</string>
    <string name="price">Price</string>
    <string name="Brand">Brand</string>
    <string name="Save">SALVA</string>
    <string name="generic_error">Errore</string>
    <string name="username_change_success">Username modificato con successo</string>
    <string name="email_change_success">Email modificata con successo</string>
    <string name="user_delete_success">Account eliminato con successo</string>
    <string name="password_change_success">Password modificata con successo</string>
    <string name="picture_change_success">Immagine modificata con successo</string>
    <string name="image_uploading">Caricamento immagine…</string>
    <string name="image_uploading_error">Errore nel caricamento dell\'immagine</string>
    <string name="upload_percentage">Caricamento in corso…\n %d kB / %d kB</string>
    <!-- Strings related to change password -->
    <string name="old_password">Vecchia Password</string>
    <string name="new_password">Nuova Password</string>
    <string name="repeat_password">Ripeti la Password</string>
    <string name="change_password_btn">Cambia la Password</string>
    <string name="pswd_must_be_equal">Le password non combaciano</string>
    <!-- Strings related to products -->
    <string name="product">prodotto</string>
    <string name="list_item_title">Nome Prodotto</string>
    <string name="list_item_description">Descrizione</string>
    <string name="goto_offer">Vai all\' Offerta</string>
    <string name="add_tracking">Aggiungi al Tracking</string>
    <string name="remove_tracking">Rimuovi dal Tracking</string>
    <string name="track_added">Prodotto Aggiunto!</string>
    <string name="track_remove">Prodotto Rimosso!</string>
    <string name="searching">Ricerca in corso…</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="notifications">Notifiche</string>
    <string name="mainSettings">Generali</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="enableNotifications">Abilita le Notifiche</string>
    <string name="notificationsOFF">Notfiche disabilitate</string>
    <string name="notificationsON">Notifiche abilitate</string>
    <string name="enableDarkTheme">Dark Theme</string>
    <string name="enableLightTheme">Light Theme</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="errorAuthToast">Devi prima autenticarti!</string>
    <string name="logout">Esci</string>
    <string name="logoutDesc">Esegui il log out</string>
    <string name="logoutExecuted">"Logout Eseguito! "</string>
    <string name="link_prod_title">Link al prodotto Amazon</string>
    <string name="traccia">Traccia</string>
    <string name="trackingDialogTitle">Confermi di voler tracciare questo prodotto?</string>
    <string name="GetToken">Ottieni Token</string>
    <string name="TokenDesc">Dev Mode only</string>
    <string name="no">Cancella</string>
    <string name="yes">Traccia</string>
    <string name="AppVersion">Versione App</string>
    <string name="Version">1.0</string>
    <string name="Theme">Tema</string>
    <string name="warning">ATTENZIONE:</string>
    <string name="closeBtn">Chiudi</string>
    <string name="msg_token_fmt">"TOKEN FCM: "</string>
    <string name="notOnOffer">Non in offerta</string>
    <string name="goToProduct">Vai al Prodotto</string>
    <string name="errorText">Inserisci un link valido</string>
    <string name="largeImageTitle">Dettagli</string>
    <string name="perc_risparmio">perc risparmio</string>
    <string name="registrationTokenMsg">"Registrazione Firebase token FMC: "</string>
    <!-- Confirmation Dialog -->
    <string name="dialog_message_email">Per modificare l\'email è necessario reinserire la password:</string>
    <string name="dialog_message_delete">Sicuro di voler eliminare l\'account?</string>
    <string name="caps_edit">MODIFICA</string>
    <string name="caps_delete">ELIMINA</string>
    <string name="caps_abort">ANNULLA</string>
    <string name="notSamePsw">Le password non coincidono</string>
    <string name="registrationSucceded">Registrazione effettuata</string>
    <string name="emailRegError">Email già registrata</string>
    <string name="errorGLogin">Login Google Fallito</string>
    <string name="server_client_id">379014634580-3n25lbq8tto0bialld9no5go73rgjgsq.apps.googleusercontent.com</string>
    <string name="mario_rossi_email_com">mario.rossi@email.com</string>
    <string name="mario_rossi">Mario Rossi</string>
    <string name="trackp_0">0</string>

    <!-- Reset Password -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_forgotten">Hai dimenticato la password?</string>
    <string name="error_reset_Psw">Errore nel reset della password</string>
    <string name="checkEmail">Email inviata!</string>
    <string name="sync_header">Sync</string>

    <!-- Preferences -->
    <string name="darkTheme_preference">isDark</string>
    <string name="notification_preference">isNotificationOn</string>
    <string name="first_boot">isFirstBoot</string>
    <string name="isLoggedWithGoogle">isLoggedWithGoogle</string>
    <string name="googleTokenId">googleTokenId</string>

</resources>