<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notifications">
        <SwitchPreferenceCompat
            app:key="@string/notifications"
            app:title="@string/enableNotifications" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/Theme">
        <SwitchPreferenceCompat
            app:key="@string/Theme"
            app:title="@string/enableDarkTheme"
            android:defaultValue="false"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/mainSettings">
    <Preference
        android:key="@string/GetToken"
        android:summary="@string/TokenDesc"
        android:title="@string/GetToken" />

    <Preference
        android:key="@string/AppVersion"
        android:summary="@string/Version"
        android:title="@string/AppVersion" />
    // termini e condizioni
    // Esci
    <Preference
        android:key="@string/logoutDesc"
        android:summary="@string/logoutDesc"
        android:title="@string/logout" />
    </PreferenceCategory>


</PreferenceScreen>