<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/cardview_dark_background"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_user_profile"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/title_profile" />

                <TextView
                    android:id="@+id/fullname_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/profile_image"
                    android:includeFontPadding="false"
                    android:text="Mario Rossi"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/email_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fullname_field"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/profile_image"
                    android:includeFontPadding="false"
                    android:text="mario.rossi@email.com"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginTop="-100dp"
                android:layout_width="match_parent"
                android:padding="20dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_height="125dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    app:cardBackgroundColor="#fece2f"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:padding="15dp">

                        <ImageView
                            android:layout_centerHorizontal="true"
                            android:layout_height="35dp"
                            android:layout_width="35dp"
                            android:src="@drawable/ic_resource_track"
                            android:contentDescription="@string/title_tracking" />

                        <TextView
                            android:id="@+id/item_tracked_label"
                            android:includeFontPadding="false"
                            android:layout_centerInParent="true"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="30"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/payment_desc"
                            android:includeFontPadding="false"
                            android:layout_below="@id/item_tracked_label"
                            android:layout_centerHorizontal="true"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/tracked_it"
                            android:textSize="20sp" />

                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/name_surename_it"
                    android:id="@+id/name_profile"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:drawableStart="@drawable/ic_user_field"
                        android:drawablePadding="10dp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="Mario Rossi"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/prompt_email"
                    android:id="@+id/email_profile"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="mario.rossi@email.com"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/phone_it"
                    android:id="@+id/phone_profile"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:drawableStart="@drawable/ic_phone"
                        android:drawablePadding="10dp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="+39 3385467084"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/prompt_password"
                    android:id="@+id/password_profile"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="10dp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="sr*******"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:background="#fece2f"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:text="@string/edit_button_it" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>